kubernetes/files/00-namespace.yml
{
  "kind": "Namespace",
  "apiVersion": "v1",
  "metadata": {
    "name": "desafio-devops",
    "labels": {
      "name": "desafio-devops"
    }
  }
}
