kubernetes/files/02-deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: desafio-devops-deployment
  namespace: desafio-devops
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: desafio-devops-app
    spec:
      securityContext:
        runAsUser: 0
        fsGroup: 1000
      containers:
        - name: desafio-devops-nodejs
          image: desafio-devops-nodejs
          imagePullPolicy: Never
          ports:
          - containerPort: 3000
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 30
