kubernetes/files/01-service.yml
apiVersion: v1
kind: Service
metadata:
  name: desafio-devops-svc
  namespace: desafio-devops
spec:
  type: NodePort
  selector:
    app: desafio-devops-app
  ports:
    - name: desafio-devops-port3000
      port: 3000
      targetPort: 3000
