kubernetes/files/03-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: desafio-devops
  name: desafio-devops-ingress-http
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: desafio-devops.kelson.io
    http:
      paths:
      - path: /
        backend:
          serviceName: desafio-devops-svc
          servicePort: 8080
